samples/_failures_safe/1761004196_c0c739_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d870200.c: In function ‘main’:
./samples/SAFE/__tmp_8d870200.c:154: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_8d870200.c:153:13: error: expected declaration or statement at end of input
  153 |             return EXIT_FAILURE
      |             ^~~~~~
./samples/SAFE/__tmp_8d870200.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d870200.c:153:13: error: expected declaration or statement at end of input
